src/objects/saReport__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalRequestDatetime__c</fullName>
        <label>ApprovalRequestDatetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>saReport_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AvailabilityDate__c</fullName>
        <label>AvailabilityDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <globalPicklist>sa_Report_Categories</globalPicklist>
        <label>Category</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CommunityLink__c</fullName>
        <formula>$Setup.auCommunityCustomSettings__c.CommunityDomainUrl__c + &apos;/saReport?rptid=&apos; + Id + &apos;&amp;src=Email&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CommunityLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedByLastname__c</fullName>
        <formula>CreatedBy__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedByLastname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CreatedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>saReport</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatorReceiveEmail__c</fullName>
        <formula>CreatedBy__r.SAReceiveApprovalRequestEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatorReceiveEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <formula>IF(
MONTH(DATEVALUE(CreatedDate))&gt;=4,Year(DATEVALUE(CreatedDate)),Year(DATEVALUE(CreatedDate))-1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FiscalYear</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HasAttachments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasAttachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNew__c</fullName>
        <formula>IF(AvailabilityDate__c&gt;(NOW()-7),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReportEvolva__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsReportEvolva</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkID__c</fullName>
        <externalId>true</externalId>
        <label>LinkID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NbComment__c</fullName>
        <label>NbComment</label>
        <summaryFilterItems>
            <field>saReportDetail__c.Type__c</field>
            <operation>equals</operation>
            <value>コメント</value>
        </summaryFilterItems>
        <summaryForeignKey>saReportDetail__c.ConcernedReport__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NbCopy__c</fullName>
        <label>NbCopy</label>
        <summaryFilterItems>
            <field>saReportDetail__c.Type__c</field>
            <operation>equals</operation>
            <value>マネした</value>
        </summaryFilterItems>
        <summaryForeignKey>saReportDetail__c.ConcernedReport__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NbDaysSinceRequestApproval__c</fullName>
        <formula>TODAY() - DATEVALUE(ApprovalRequestDatetime__c - 0.25) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NbDaysSinceRequestApproval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NbLike__c</fullName>
        <label>NbLike</label>
        <summaryFilterItems>
            <field>saReportDetail__c.Type__c</field>
            <operation>equals</operation>
            <value>いいね！, 超いいね！</value>
        </summaryFilterItems>
        <summaryForeignKey>saReportDetail__c.ConcernedReport__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NbView__c</fullName>
        <label>NbView</label>
        <summaryFilterItems>
            <field>saReportDetail__c.Type__c</field>
            <operation>equals</operation>
            <value>見た</value>
        </summaryFilterItems>
        <summaryForeignKey>saReportDetail__c.ConcernedReport__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OwnerName__c</fullName>
        <label>OwnerName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <globalPicklist>sa_Report_Process</globalPicklist>
        <label>Process</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report_body__c</fullName>
        <label>Report body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAApprover1IsActive__c</fullName>
        <formula>SAApprover1__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAApprover1IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAApprover1Lastname__c</fullName>
        <formula>SAApprover1__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAApprover1Lastname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAApprover1ReceiveEmail__c</fullName>
        <formula>SAApprover1__r.SAReceiveApprovalRequestEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAApprover1ReceiveEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAApprover1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAApprover1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>saReport1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAApprover2IsActive__c</fullName>
        <formula>SAApprover2__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAApprover2IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAApprover2Lastname__c</fullName>
        <formula>SAApprover2__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAApprover2Lastname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAApprover2ReceiveEmail__c</fullName>
        <formula>SAApprover2__r.SAReceiveApprovalRequestEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAApprover2ReceiveEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAApprover2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAApprover2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>saReport2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAApprover3IsActive__c</fullName>
        <formula>SAApprover3__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAApprover3IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAApprover3Lastname__c</fullName>
        <formula>SAApprover3__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAApprover3Lastname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAApprover3ReceiveEmail__c</fullName>
        <formula>SAApprover3__r.SAReceiveApprovalRequestEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAApprover3ReceiveEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAApprover3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAApprover3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>saReport3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publish</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>saReport</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IsReportEvolva__c</columns>
        <columns>State__c</columns>
        <columns>LinkID__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Category__c</columns>
        <columns>Report_body__c</columns>
        <columns>Subject__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CreatedDate__c</columns>
        <columns>FiscalYear__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SA_Report-{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Approver__c</fullName>
        <label>Approver</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>PublishToAll__c</fullName>
        <label>PublishToAll</label>
    </sharingReasons>
</CustomObject>